Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNxqvJ4FWOaxGXWRxcT5qSh",
+      "authorship_tag": "ABX9TyPjhq0dadBPuHnbORRvUBKH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4778,15 +4778,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "DPvmdZwelWCQ",
-        "outputId": "cc604cd1-f90b-4d14-fa96-0055e7b80043",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cc604cd1-f90b-4d14-fa96-0055e7b80043"
       },
       "source": [
         "!ghc -e ':t elem'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4801,15 +4801,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "HeUocyAAlw4G",
-        "outputId": "f7ba26d1-374b-4a9d-e775-4b133158abf2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f7ba26d1-374b-4a9d-e775-4b133158abf2"
       },
       "source": [
         "!ghc -e ':t (>)'"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4824,16 +4824,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "TmtVbaYmmCBw",
-        "outputId": "fb9befe1-02b2-453a-a42e-43823a621a8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb9befe1-02b2-453a-a42e-43823a621a8d"
       },
       "source": [
         "!ghc -e ':t compare'\r\n",
         "!ghc -e 'compare \"Abrakadabra\" \"Zebra\"'"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4849,20 +4849,270 @@
       "cell_type": "code",
       "metadata": {
         "id": "yp8bwfCfmNAe",
-        "outputId": "c83b58a8-b893-454f-b615-49a69b8b8604",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c83b58a8-b893-454f-b615-49a69b8b8604"
+      },
+      "source": [
+        "!ghc -e ':t show'"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "show :: Show a => a -> String\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vkLNASfPmtTD",
+        "outputId": "eb2ff400-6d27-45c1-cfd6-7addfca421cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!ghc -e ':t show'"
+        "!ghc -e 'show 3'\n",
+        "!ghc -e 'show 5.334'\n",
+        "!ghc -e 'show True'"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"3\"\n",
+            "\"5.334\"\n",
+            "\"True\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OvlvXtZKoHib"
+      },
+      "source": [
+        "Read 型クラスは Show 型クラスの反対で、read 関数は string を Read 型クラスへ変換する。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ask7eBwBoTMs",
+        "outputId": "551ccf77-823c-4810-c89c-daffca68ac1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e ':t read'"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "read :: Read a => String -> a\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Y0Slc2xmvZg",
+        "outputId": "ef3a99e3-696e-46a0-b78b-4cdf29c7795b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e 'read \"True\" || False'\n",
+        "!ghc -e 'read \"8.2\" + 3.8'\n",
+        "!ghc -e 'read \"5\" - 2'\n",
+        "!ghc -e 'read \"[1,2,3,4]\" ++ [3]'\n"
       ],
       "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "show :: Show a => a -> String\n"
+            "True\n",
+            "12.0\n",
+            "3\n",
+            "[1,2,3,4,3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UyaT16a_phvc",
+        "outputId": "bd303c2e-636e-468b-93d6-e06b9c422004",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "!ghc -e 'read \"4\"'"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<interactive>: Prelude.read: no parse\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mcMTlNxfmyNH",
+        "outputId": "dd0fc6e0-5e20-417a-9042-aacba43df20b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e 'read \"5\"::Int'\n",
+        "!ghc -e 'read \"5\"::Float'\n",
+        "!ghc -e '(read \"5\"::Float) * 4'\n",
+        "!ghc -e 'read \"[1,2,3,4]\"::[Int]'\n",
+        "!ghc -e $'read \"(3, \\'a\\')\"::(Int, Char)'\n",
+        "!echo\n",
+        "!ghc -e '(read \"[1,2,3,4]\"::[Int]) ++ [80]'"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "5.0\n",
+            "20.0\n",
+            "[1,2,3,4]\n",
+            "(3,'a')\n",
+            "\n",
+            "[1,2,3,4,80]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aHcMDpveqdO7",
+        "outputId": "82023c4c-86fa-48ae-c2aa-9f7a29f0b02e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e 'read \"5\"::Int'"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3i52Ibk2rpeG"
+      },
+      "source": [
+        "!ghc -e ':k Enum'\r\n",
+        "!ghc -e ':i Enum'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5P0qAgaim0Kv",
+        "outputId": "8bb958f0-7276-42ab-d704-9a240ad7dec7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e $'[\\'a\\'..\\'e\\']'\n",
+        "!ghc -e '[LT ..GT]'\n",
+        "!ghc -e '[3 ..5]'\n",
+        "!ghc -e $'succ \\'B\\''\n",
+        "!echo\n",
+        "!ghc -e 'succ LT'\n",
+        "!ghc -e 'succ GT'"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"abcde\"\n",
+            "[LT,EQ,GT]\n",
+            "[3,4,5]\n",
+            "'C'\n",
+            "\n",
+            "EQ\n",
+            "<interactive>: Prelude.Enum.Ordering.succ: bad argument\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RyYpFX2Vm1Bo",
+        "outputId": "91f1b135-1451-4366-d5b0-cf9719b54bca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e 'minBound :: Int'\n",
+        "!ghc -e 'maxBound :: Char'\n",
+        "!ghc -e 'maxBound :: Bool'\n",
+        "!ghc -e 'minBound :: Bool'\n",
+        "!echo\n",
+        "!ghc -e ':t minBound'\n"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-9223372036854775808\n",
+            "'\\1114111'\n",
+            "True\n",
+            "False\n",
+            "\n",
+            "minBound :: Bounded a => a\n"
           ],
           "name": "stdout"
         }
@@ -4881,136 +5131,87 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RAUY3hvOXdMR"
+        "id": "fE9RVhdpm2uf"
       },
       "source": [
-        "Members of Show can be presented as strings.\n",
-        "All types covered so far except for functions are a part of Show.\n",
-        "The most used function that deals with the Show typeclass is show.\n",
-        "It takes a value whose type is a member of Show and presents it to us as a string.\n",
-        "\n",
-        "ghci> show 3\n",
-        "\"3\"\n",
-        "ghci> show 5.334\n",
-        "\"5.334\"\n",
-        "ghci> show True\n",
-        "\"True\"\n",
-        "Read is sort of the opposite typeclass of Show.\n",
-        "The read function takes a string and returns a type which is a member of Read.\n",
-        "\n",
-        "ghci> read \"True\" || False\n",
-        "True\n",
-        "ghci> read \"8.2\" + 3.8\n",
-        "12.0\n",
-        "ghci> read \"5\" - 2\n",
-        "3\n",
-        "ghci> read \"[1,2,3,4]\" ++ [3]\n",
-        "[1,2,3,4,3]\n",
-        "So far so good.\n",
-        "Again, all types covered so far are in this typeclass.\n",
-        "But what happens if we try to do just read \"4\"?\n",
-        "\n",
-        "ghci> read \"4\"\n",
-        "<interactive>:1:0:\n",
-        "    Ambiguous type variable `a' in the constraint:\n",
-        "      `Read a' arising from a use of `read' at <interactive>:1:0-7\n",
-        "    Probable fix: add a type signature that fixes these type variable(s)\n",
-        "What GHCI is telling us here is that it doesn't know what we want in return.\n",
-        "Notice that in the previous uses of read we did something with the result afterwards.\n",
-        "That way, GHCI could infer what kind of result we wanted out of our read.\n",
-        "If we used it as a boolean, it knew it had to return a Bool.\n",
-        "But now, it knows we want some type that is part of the Read class, it just doesn't know which one.\n",
-        "Let's take a look at the type signature of read.\n",
-        "\n",
-        "ghci> :t read\n",
-        "read :: (Read a) => String -> a\n",
-        "See? It returns a type that's part of Read but if we don't try to use it in some way later, it has no way of knowing which type.\n",
-        "That's why we can use explicit type annotations.\n",
-        "Type annotations are a way of explicitly saying what the type of an expression should be.\n",
-        "We do that by adding :: at the end of the expression and then specifying a type.\n",
-        "Observe:\n",
-        "\n",
-        "ghci> read \"5\" :: Int\n",
-        "5\n",
-        "ghci> read \"5\" :: Float\n",
-        "5.0\n",
-        "ghci> (read \"5\" :: Float) * 4\n",
-        "20.0\n",
-        "ghci> read \"[1,2,3,4]\" :: [Int]\n",
-        "[1,2,3,4]\n",
-        "ghci> read \"(3, 'a')\" :: (Int, Char)\n",
-        "(3, 'a')\n",
-        "Most expressions are such that the compiler can infer what their type is by itself.\n",
-        "But sometimes, the compiler doesn't know whether to return a value of type Int or Float for an expression like read \"5\".\n",
-        "To see what the type is, Haskell would have to actually evaluate read \"5\".\n",
-        "But since Haskell is a statically typed language, it has to know all the types before the code is compiled (or in the case of GHCI, evaluated).\n",
-        "So we have to tell Haskell: \"Hey, this expression should have this type, in case you don't know!\".\n",
-        "\n",
-        "Enum members are sequentially ordered types — they can be enumerated.\n",
-        "The main advantage of the Enum typeclass is that we can use its types in list ranges.\n",
-        "They also have defined successors and predecesors, which you can get with the succ and pred functions.\n",
-        "Types in this class: (), Bool, Char, Ordering, Int, Integer, Float and Double.\n",
-        "\n",
-        "ghci> ['a'..'e']\n",
-        "\"abcde\"\n",
-        "ghci> [LT ..\n",
-        "GT]\n",
-        "[LT,EQ,GT]\n",
-        "ghci> [3 ..\n",
-        "5]\n",
-        "[3,4,5]\n",
-        "ghci> succ 'B'\n",
-        "'C'\n",
-        "Bounded members have an upper and a lower bound.\n",
-        "\n",
-        "ghci> minBound :: Int\n",
-        "-2147483648\n",
-        "ghci> maxBound :: Char\n",
-        "'\\1114111'\n",
-        "ghci> maxBound :: Bool\n",
-        "True\n",
-        "ghci> minBound :: Bool\n",
-        "False\n",
-        "minBound and maxBound are interesting because they have a type of (Bounded a) => a.\n",
-        "In a sense they are polymorphic constants.\n",
         "\n",
         "All tuples are also part of Bounded if the components are also in it.\n",
         "\n",
-        "ghci> maxBound :: (Bool, Int, Char)\n",
+        "!ghc -e 'maxBound :: (Bool, Int, Char)\n",
         "(True,2147483647,'\\1114111')\n",
         "Num is a numeric typeclass.\n",
         "Its members have the property of being able to act like numbers.\n",
-        "Let's examine the type of a number.\n",
+        "Let's examine the type of a number.\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9GSp8EE0m2Af"
+      },
+      "source": [
         "\n",
-        "ghci> :t 20\n",
+        "!ghc -e ':t 20\n",
         "20 :: (Num t) => t\n",
         "It appears that whole numbers are also polymorphic constants.\n",
         "They can act like any type that's a member of the Num typeclass.\n",
         "\n",
-        "ghci> 20 :: Int\n",
+        "!ghc -e '20 :: Int\n",
         "20\n",
-        "ghci> 20 :: Integer\n",
+        "!ghc -e '20 :: Integer\n",
         "20\n",
-        "ghci> 20 :: Float\n",
+        "!ghc -e '20 :: Float\n",
         "20.0\n",
-        "ghci> 20 :: Double\n",
+        "!ghc -e '20 :: Double\n",
         "20.0\n",
         "Those are types that are in the Num typeclass.\n",
-        "If we examine the type of *, we'll see that it accepts all numbers.\n",
+        "If we examine the type of *, we'll see that it accepts all numbers.\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5J7GHmO_m4NO"
+      },
+      "source": [
         "\n",
-        "ghci> :t (*)\n",
+        "!ghc -e ':t (*)\n",
         "(*) :: (Num a) => a -> a -> a\n",
         "It takes two numbers of the same type and returns a number of that type.\n",
         "That's why (5 :: Int) * (6 :: Integer) will result in a type error whereas 5 * (6 :: Integer) will work just fine and produce an Integer \n",
         "because 5 can act like an Integer or an Int.\n",
         "\n",
-        "To join Num, a type must already be friends with Show and Eq.\n",
+        "To join Num, a type must already be friends with Show and Eq.\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5zBmJeqXm5K2"
+      },
+      "source": [
         "\n",
         "Integral is also a numeric typeclass.\n",
         "Num includes all numbers, including real numbers and integral numbers, Integral includes only integral (whole) numbers.\n",
         "In this typeclass are Int and Integer.\n",
         "\n",
-        "Floating includes only floating point numbers, so Float and Double.\n",
+        "Floating includes only floating point numbers, so Float and Double.\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cXaiqQL4m56W"
+      },
+      "source": [
         "\n",
         "A very useful function for dealing with numbers is fromIntegral.\n",
         "It has a type declaration of fromIntegral :: (Num b, Integral a) => a -> b.\n",
@@ -5020,7 +5221,17 @@
         "I think that's there for historical reasons or something, although in my opinion, it's pretty stupid.\n",
         "Anyway, if we try to get a length of a list and then add it to 3.2, we'll get an error because we tried to add together an Int and a \n",
         "floating point number.\n",
-        "So to get around this, we do fromIntegral (length [1,2,3,4]) + 3.2 and it all works out.\n",
+        "So to get around this, we do fromIntegral (length [1,2,3,4]) + 3.2 and it all works out.\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5jxV9jzem7I-"
+      },
+      "source": [
         "\n",
         "Notice that fromIntegral has several class constraints in its type signature.\n",
         "That's completely valid and as you can see, the class constraints are separated by\n",
