Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN9ar70357I9n+4fwYX85HD",
+      "authorship_tag": "ABX9TyPNwShJG9Oif3N2nocTXyvi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5515,7 +5515,7 @@
         "!echo $'[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | ghc -e 'getContents >>= print . map (read::String -> [(Int, Int)]) . lines'\r\n",
         "!echo $'[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | ghc -e 'getContents >>= print. map (\\(a,b) -> a+b) . concat . map (read::String -> [(Int, Int)]) . lines'\r\n"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5549,13 +5549,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wZ2WrU8nNh-e"
+        "id": "wZ2WrU8nNh-e",
+        "outputId": "7eac9f0c-0f23-425f-ad2c-ee01c2f728ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# head を実装する"
+        "# head を実装する\r\n",
+        "# !echo $'[4,5,6]' | ghc -e $'getLine >>= let {head01::[a]->a;head01[]=error \"Can\\'t\"; head01 (x:_)=x;} in (read::String->[a])'\r\n",
+        "# getLine の結果は IO のままなので getContents のときと同様一旦 lines で処理する必要がある\r\n",
+        "# map の結果は print を使わないと返り値だけではエラーになる\r\n",
+        "!echo $'[4,5,6]' | ghc -e $'getContents >>= print.map (read::String-> [Int]).lines'\r\n",
+        "!echo $'[4,5,6]' | ghc -e $'getContents >>= print.concat.map (read::String-> [Int]).lines'\r\n",
+        "!echo $'[4,5,6]' | ghc -e $'getContents >>= let {head01::[a]->a;head01[]=error \"Can\\'t\"; head01 (x:_)=x;} in print.head01.concat.map(read::String->[Int]).lines'\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[4,5,6]]\n",
+            "[4,5,6]\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
