Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpKkeDMsEBPn5/4vWL77TY",
+      "authorship_tag": "ABX9TyPZPaGTQMFUuZ0wiSM1aU0c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5537,16 +5537,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zvrQFVBIIOYx"
-      },
-      "source": [
-        "# いまここ \n",
-        "http://learnyouahaskell.com/syntax-in-functions"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "wZ2WrU8nNh-e",
@@ -5662,11 +5652,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Aq-Zn5ZOFyN",
-        "outputId": "2cb59c61-acc5-4ed9-b3cd-195f5afa030e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7Aq-Zn5ZOFyN",
+        "outputId": "2cb59c61-acc5-4ed9-b3cd-195f5afa030e"
       },
       "source": [
         "# リスト内包表記を使って length を実装する\r\n",
@@ -5688,17 +5678,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bmspZeMeFJ60"
+        "id": "bmspZeMeFJ60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d4736a5-b8a3-4f52-b10a-051f0945e688"
       },
       "source": [
         "# パターンマッチングを使ってlength を実装する\r\n",
-        "\r\n",
-        "length02 :: (Num b) => [a] -> b  \r\n",
-        "length02 [] = 0  \r\n",
-        "length02 (_:xs) = 1 + length' xs  \r\n"
+        "#\r\n",
+        "# length02 :: (Num b) => [a] -> b\r\n",
+        "# length02 [] = 0\r\n",
+        "# length02 (_:xs) = 1 + length' xs\r\n",
+        "#\r\n",
+        "!echo $'[1,2,3]' | ghc -e 'getContents >>= let {length02 :: (Num b) => [a] -> b; length02 [] = 0; length02 (_:xs) = 1 + length02 xs;} in print.length02.concat.map(read::String->[Int]).lines'\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zvrQFVBIIOYx"
+      },
+      "source": [
+        "# いまここ \n",
+        "http://learnyouahaskell.com/syntax-in-functions"
+      ]
     },
     {
       "cell_type": "code",
@@ -5706,19 +5720,15 @@
         "id": "OlVrf4xGQLhh"
       },
       "source": [
-        "\r\n",
-        "This is similar to the factorial function we wrote earlier. First\r\n",
-        "we defined the result of a known input — the empty list. This\r\n",
-        "is also known as the edge condition. Then in the second pattern\r\n",
-        "we take the list apart by splitting it into a head and a tail.\r\n",
-        "We say that the length is equal to 1 plus the length of the\r\n",
-        "tail. We use _ to match the head because we don't actually care\r\n",
-        "what it is. Also note that we've taken care of all possible\r\n",
+        " Also note that we've taken care of all possible\r\n",
         "patterns of a list. The first pattern matches an empty list\r\n",
+        "\r\n",
         "and the second one matches anything that isn't an empty list.\r\n",
         "Let's see what happens if we call length' on \"ham\". First, it\r\n",
         "will check if it's an empty list. Because it isn't, it falls\r\n",
+        "\r\n",
         "through to the second pattern. It matches on the second pattern\r\n",
+        "\r\n",
         "and there it says that the length is 1 + length' \"am\", because\r\n",
         "we broke it into a head and a tail and discarded the head. O\r\n",
         "-kay. The length' of \"am\" is, similarly, 1 + length' \"m\". So\r\n",
