Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPBkEi4hGoZEUBTXrc9la5K",
+      "authorship_tag": "ABX9TyM1LBNbaQHM6YvPT7ixTevL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5741,11 +5741,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ixKFQX_Km4y-",
-        "outputId": "e5cf9b13-9d7e-40a7-c96f-88f3686a5f07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ixKFQX_Km4y-",
+        "outputId": "e5cf9b13-9d7e-40a7-c96f-88f3686a5f07"
       },
       "source": [
         "%%writefile wwrap03.hs\r\n",
@@ -5779,16 +5779,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qBAVAAPQnHkW",
-        "outputId": "3638daff-12bc-4b0e-d472-4e8e8d502fc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qBAVAAPQnHkW",
+        "outputId": "07492994-9a55-41bb-eee0-c3df2bdd2b57"
       },
       "source": [
-        "!echo $'This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. ;jk lkjl; ljkl;jk \\n lkj;lj this \\nthis is a epnl;kj; lk;j' |runghc wwrap03.hs"
+        "!echo $'This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. ;jk lkjl; ljkl;jk \\n\\n lkj;lj this \\nthis is a epnl;kj; lk;j' |runghc wwrap03.hs"
       ],
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -5798,8 +5798,32 @@
             "is an apple. This is a pen. That is an apple. This is a pen.\n",
             "That is an apple. This is a pen. That is an apple. This is a\n",
             "pen. That is an apple. ;jk lkjl; ljkl;jk\n",
+            "\n",
             "lkj;lj this\n",
             "this is a epnl;kj; lk;j\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "INN29JL62hhJ",
+        "outputId": "6b38dd76-4cad-471b-8476-0a82bfe3d0a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc --version"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
           ],
           "name": "stdout"
         }
@@ -5813,6 +5837,62 @@
       "source": [
         "# いまここ \n",
         "http://learnyouahaskell.com/syntax-in-functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "np8NdWgR21uX",
+        "outputId": "42098fe0-2af0-489a-8d9a-51dca0ddbd8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "## パターンマッチングで sum を実装する\r\n",
+        "## sum01 :: (Num a) => [a] -> a  \r\n",
+        "## sum01 [] = 0  \r\n",
+        "## sum01 (x:xs) = x + sum01 xs  \r\n",
+        "!echo $'3, 4, 5' | ghc -e 'getContents >>= putStr.(Data.List.Split.splitOn \",\").concat.lines'"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:0:25: error:\n",
+            "    Not in scope: ‘Data.List.Split.splitOn’\n",
+            "    No module named ‘Data.List.Split’ is imported.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xf5wNfqt44wl",
+        "outputId": "bbece043-4621-41d9-a0f7-76d5150e4666",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e $'Data.Text.splitOn \"..\" \"a..b...c....d..\"'"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:0:1: error:\n",
+            "    Not in scope: ‘Data.Text.splitOn’\n",
+            "    No module named ‘Data.Text’ is imported.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
