Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM1LBNbaQHM6YvPT7ixTevL",
+      "authorship_tag": "ABX9TyMmQR8PsQW7e4Br92lg+jVP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +33,7 @@
         "# メモ\n",
         "1. このノートブックは Colab で読まれることを想定している。 是非 Colab で開いてください。\n",
         "1. Colab の環境を利用して Haskellを勉強する。Colab の環境は Hakell はインストールされていないので、インストールする。\n",
-        "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!runghc filename.hs` で実行するか、!ghc -e でコマンドライン・ワンライナーで実行する。\n"
+        "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!runghc filename.hs` で実行するか、!ghc -e でコマンドラインワンライナーで実行する。\n"
       ]
     },
     {
@@ -161,7 +160,7 @@
         "outputId": "eebba1d2-f09d-4825-ada2-44e350d8e3ea"
       },
       "source": [
-        "# シェル(コマンドライン・ワンライナー)で実行する\n",
+        "# シェル(コマンドラインワンライナー)で実行する\n",
         "# 便利なので多用するかもしれない\n",
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
@@ -371,7 +370,7 @@
         "outputId": "a21a9772-f4c9-42a8-bd07-5636c404eee7"
       },
       "source": [
-        "# 実験 コマンドライン・ワンライナーにできるか\r\n",
+        "# 実験 コマンドラインワンライナーにできるか\r\n",
         "!ghc -e \"let fac  n = if n == 0 then 1 else n * fac (n-1) in print ( fac 42 )\""
       ],
       "execution_count": null,
@@ -1210,7 +1209,7 @@
       },
       "source": [
         "# >>= はデータの流れが途中から逆方向になるが\r\n",
-        "# コマンドライン・ワンライナーでは便利\r\n",
+        "# コマンドラインワンライナーでは便利\r\n",
         "!echo $'10 20' | ghc -e 'getLine >>= print.sum.map read.words'"
       ],
       "execution_count": null,
@@ -1230,7 +1229,7 @@
         "id": "dFGoBpsu-Psz"
       },
       "source": [
-        "# コマンドライン・ワンライナーでリスト内包表記は使えるか\r\n",
+        "# コマンドラインワンライナーでリスト内包表記は使えるか\r\n",
         "# => 使えないと思う。\r\n"
       ],
       "execution_count": null,
@@ -5280,7 +5279,7 @@
       },
       "source": [
         "# パターンマッチング\r\n",
-        "ここからパターンマッチングになるが、コマンドライン・ワンライナーでパターンマッチングできるか。"
+        "ここからパターンマッチングになるが、コマンドラインワンライナーでパターンマッチングできるか。"
       ]
     },
     {
@@ -5765,7 +5764,7 @@
         "    x <- getContents\r\n",
         "    putStr $ unlines $ map (wordwrap 60) $ lines x\r\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5788,7 +5787,7 @@
       "source": [
         "!echo $'This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. This is a pen.  That is an apple. ;jk lkjl; ljkl;jk \\n\\n lkj;lj this \\nthis is a epnl;kj; lk;j' |runghc wwrap03.hs"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5810,15 +5809,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "INN29JL62hhJ",
-        "outputId": "6b38dd76-4cad-471b-8476-0a82bfe3d0a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b38dd76-4cad-471b-8476-0a82bfe3d0a0"
       },
       "source": [
         "!ghc --version"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5843,19 +5842,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "np8NdWgR21uX",
-        "outputId": "42098fe0-2af0-489a-8d9a-51dca0ddbd8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "42098fe0-2af0-489a-8d9a-51dca0ddbd8a"
       },
       "source": [
-        "## パターンマッチングで sum を実装する\r\n",
+        "# パターンマッチングで sum を実装する\r\n",
+        "# コマンドラインワンライナー\r\n",
+        "\r\n",
         "## sum01 :: (Num a) => [a] -> a  \r\n",
         "## sum01 [] = 0  \r\n",
         "## sum01 (x:xs) = x + sum01 xs  \r\n",
         "!echo $'3, 4, 5' | ghc -e 'getContents >>= putStr.(Data.List.Split.splitOn \",\").concat.lines'"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5873,15 +5874,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "xf5wNfqt44wl",
-        "outputId": "bbece043-4621-41d9-a0f7-76d5150e4666",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bbece043-4621-41d9-a0f7-76d5150e4666"
       },
       "source": [
         "!ghc -e $'Data.Text.splitOn \"..\" \"a..b...c....d..\"'"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
