Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMPHReSi5HTxnOC5U3B49T/",
+      "authorship_tag": "ABX9TyND90Req3J9MTlrhlyIGVCG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5976,14 +5976,48 @@
       "source": [
         "いままで使ってきた getContents など、標準入力は文字列で入ってくるのを、read に型を指定することでなんとか数値にしたりしていたが、リストをどう受取るか。\r\n",
         "\r\n",
-        "ウォークスルー Haskell > 入出力処理  \r\n",
-        "http://walk.northcol.org/haskell/io/  \r\n",
-        "お気楽 Haskell プログラミング入門  \r\n",
-        "http://www.nct9.ne.jp/m_hiroi/func/haskell09.html  \r\n",
-        "HaskellでAtCoderに参戦して水色になった  \r\n",
-        "https://blog.miz-ar.info/2019/05/atcoder-with-haskell/  \r\n",
+        "\r\n",
+        "@hsjoihs氏による AtCoder に登録したら解くべき精選過去問 10 問を Haskell で解いてみた – Qiita  \r\n",
+        "\r\n",
+        "\r\n",
+        "@myuon_myon氏による Haskellで解くAtCoder – The curse of λ  \r\n",
+        "\r\n",
+        "\r\n",
+        "@hnw氏による HaskellでAtCoderの問題を解く（入力の高速化編） – Qiita  \r\n",
+        "\r\n",
+        "\r\n",
+        "Haskell で高速なプログラムを書くときに注意すること （2016年6月）\r\n",
+        "\r\n",
+        "\r\n",
+        "Haskellで競技プログラミング IO編  \r\n",
+        "https://qiita.com/karszawa/items/ec0c01c81c22ce060405  \r\n",
+        "\r\n",
         "配列 入力 haskell  \r\n",
+        "\r\n",
+        "HaskellでAtCoderに参戦して水色になった  \r\n",
+        "https://blog.miz-ar.info/2019/05/atcoder-with-haskell/   \r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
         "など参考にすこし脇道にそれる。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "64DGhEYhxHFd"
+      },
+      "source": [
+        "AtCoderの問題をHaskellで解く話に関しては、すでにいくつか記事が書かれているのでそちらも参照してください：\r\n",
+        "```\r\n",
+        "@hsjoihs氏による AtCoder に登録したら解くべき精選過去問 10 問を Haskell で解いてみた – Qiita  \r\n",
+        "@myuon_myon氏による Haskellで解くAtCoder – The curse of λ  \r\n",
+        "@hnw氏による HaskellでAtCoderの問題を解く（入力の高速化編） – Qiita  \r\n",
+        "また、競プロに限らずHaskellで高速なプログラムを書くコツについては、私が昔書いた記事があります：\r\n",
+        "\r\n",
+        "Haskell で高速なプログラムを書くときに注意すること （2016年6月）\r\n",
+        "大抵の注意点は紹介した記事を読めば大体カバーされているのですが、重要な注意点は何回でも強調する価値があるので、この記事でも繰り返しておきます。\r\n",
+        "```"
       ]
     },
     {
