--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO2TepHTNI1ReG0SFuJ0mQ5",
+      "authorship_tag": "ABX9TyPyszXkyPMlpb5FjZdMwPwa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5807,83 +5807,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zvrQFVBIIOYx"
-      },
-      "source": [
-        "# いまここ \n",
-        "http://learnyouahaskell.com/syntax-in-functions"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DW3BXViGhBQZ",
-        "outputId": "511c9544-aa9a-4c2e-a91e-216676db08ee"
-      },
-      "source": [
-        "!apt install ghc"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libbsd-dev libffi-dev libgmp-dev libgmpxx4ldbl\n",
-            "Suggested packages:\n",
-            "  ghc-prof ghc-doc haskell-doc llvm-3.7 gmp-doc libgmp10-doc libmpfr-dev\n",
-            "The following NEW packages will be installed:\n",
-            "  ghc libbsd-dev libffi-dev libgmp-dev libgmpxx4ldbl\n",
-            "0 upgraded, 5 newly installed, 0 to remove and 15 not upgraded.\n",
-            "Need to get 46.0 MB of archives.\n",
-            "After this operation, 569 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmpxx4ldbl amd64 2:6.1.2+dfsg-2 [8,964 B]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgmp-dev amd64 2:6.1.2+dfsg-2 [316 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu bionic/main amd64 libffi-dev amd64 3.2.1-8 [156 kB]\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 libbsd-dev amd64 0.8.7-1ubuntu0.1 [150 kB]\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu bionic/universe amd64 ghc amd64 8.0.2-11 [45.3 MB]\n",
-            "Fetched 46.0 MB in 4s (12.8 MB/s)\n",
-            "Selecting previously unselected package libgmpxx4ldbl:amd64.\n",
-            "(Reading database ... 146456 files and directories currently installed.)\n",
-            "Preparing to unpack .../libgmpxx4ldbl_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
-            "Unpacking libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Selecting previously unselected package libgmp-dev:amd64.\n",
-            "Preparing to unpack .../libgmp-dev_2%3a6.1.2+dfsg-2_amd64.deb ...\n",
-            "Unpacking libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Selecting previously unselected package libffi-dev:amd64.\n",
-            "Preparing to unpack .../libffi-dev_3.2.1-8_amd64.deb ...\n",
-            "Unpacking libffi-dev:amd64 (3.2.1-8) ...\n",
-            "Selecting previously unselected package libbsd-dev:amd64.\n",
-            "Preparing to unpack .../libbsd-dev_0.8.7-1ubuntu0.1_amd64.deb ...\n",
-            "Unpacking libbsd-dev:amd64 (0.8.7-1ubuntu0.1) ...\n",
-            "Selecting previously unselected package ghc.\n",
-            "Preparing to unpack .../ghc_8.0.2-11_amd64.deb ...\n",
-            "Unpacking ghc (8.0.2-11) ...\n",
-            "Setting up libbsd-dev:amd64 (0.8.7-1ubuntu0.1) ...\n",
-            "Setting up libffi-dev:amd64 (3.2.1-8) ...\n",
-            "Setting up libgmpxx4ldbl:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Setting up libgmp-dev:amd64 (2:6.1.2+dfsg-2) ...\n",
-            "Setting up ghc (8.0.2-11) ...\n",
-            "update-alternatives: using /usr/bin/runghc to provide /usr/bin/runhaskell (runhaskell) in auto mode\n",
-            "update-alternatives: using /usr/bin/ghc to provide /usr/bin/haskell-compiler (haskell-compiler) in auto mode\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1.3) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "np8NdWgR21uX",
@@ -5927,6 +5850,31 @@
         "!runghc sum01.hs"
       ],
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NFgA8axBsc1w",
+        "outputId": "2a52970a-7f5b-479b-9f97-d9264e003d5c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# パターンマッチングで sum を実装する\r\n",
+        "# コマンドラインワンライナーバージョン\r\n",
+        "!ghc -e $'let {sum01 :: (Num a) => [a] -> a; sum01 [] = 0; sum01 (x:xs) = x + sum01 xs } in print $ sum [1,2,3]'"
+      ],
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -5984,10 +5932,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_-_KyVpzih3l",
-        "outputId": "eff43452-005a-4c62-8688-07a462cd0be5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "eff43452-005a-4c62-8688-07a462cd0be5"
       },
       "source": [
         "# AtCoder Regular Contest #14 B問題\r\n",
@@ -6011,7 +5959,7 @@
         "    | w `elem` dict = Just b\r\n",
         "    | otherwise = check (w:dict) ws (not b)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6026,15 +5974,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "sUPPXQf9xes4",
-        "outputId": "67a57344-056f-4293-b7ea-eff9695d0232",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "67a57344-056f-4293-b7ea-eff9695d0232"
       },
       "source": [
         "!echo $'3\\nbook\\nkilo\\noldies' | runghc arc14b.hs"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6049,15 +5997,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "cChJbfD70QNL",
-        "outputId": "3165342f-8d7f-41af-d802-fa0aaff930ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3165342f-8d7f-41af-d802-fa0aaff930ec"
       },
       "source": [
         "!ghc -e $'print $ map (read::String -> Int) $ words $ \"3 4 5\"'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6072,10 +6020,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "dqV4h2Q8DU72",
-        "outputId": "05f11048-3de3-47ed-90fd-af5d0e3c945d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "05f11048-3de3-47ed-90fd-af5d0e3c945d"
       },
       "source": [
         "# atcoderfirstten00\r\n",
@@ -6086,7 +6034,7 @@
         "    s <- getLine\r\n",
         "    putStrLn $ unwords [show (a + b + c), s]"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6109,7 +6057,7 @@
       "source": [
         "!echo $'3\\n4 5 \\n 6' | runghc atcoderfirstten00.hs\r\n"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6133,7 +6081,7 @@
         "# atcoderfirstten00\r\n",
         "!echo $'3\\n4 5\\n 6' | ghc -e 'do {x <- getContents; let [a,b,c,s] = map (read::String->Int) (words x) in putStrLn (unwords [show (a + b + c), show(s)])}'"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6148,10 +6096,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "yZEzofvcf3py",
-        "outputId": "f7e461c5-7bbd-4866-fc33-beea6e145c5f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f7e461c5-7bbd-4866-fc33-beea6e145c5f"
       },
       "source": [
         "# atcoderfirstten01 product\r\n",
@@ -6160,7 +6108,7 @@
         "    [a,b] <- map read . words <$> getLine\r\n",
         "    if (a * b) `mod` 2 == 0 then putStrLn \"Even\" else putStrLn \"Odd\""
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6175,15 +6123,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "wa6aTtg-gEnu",
-        "outputId": "dee47927-b6bc-4329-db37-19e457e53c50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dee47927-b6bc-4329-db37-19e457e53c50"
       },
       "source": [
         "!echo $'4 5' | runghc atcoderfirstten01.hs"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6198,16 +6146,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "eAppaqofgNR1",
-        "outputId": "5b4c6d80-1a39-40ce-e691-3b4e8dec5745",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b4c6d80-1a39-40ce-e691-3b4e8dec5745"
       },
       "source": [
         "# atcoderfirstten01\r\n",
         "!echo $'4 5' | ghc -e $'do {[a,b] <- map (read::String->Int).words <$> getContents; if (a * b) `mod` 2 == 0 then putStrLn \"Even\" else putStrLn\"Odd\"}'"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6222,16 +6170,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "_8gvDvlhikF2",
-        "outputId": "8b55f3df-f3e5-4257-b724-292c5e31cb6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8b55f3df-f3e5-4257-b724-292c5e31cb6c"
       },
       "source": [
         "# atcoderfirstten02 placing marbles\r\n",
+        "# いまここ\r\n",
         "main = getLine >>= print . length . filter (=='1')\r\n"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
